[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hypnos"
version = "0.1.0"
description = "Hypnos is a parametric geometry engine to create meshes for structures involved in the analysis of breeder blankets."
authors = [
  { name = "Sid Mungale", email = "sid.mungale@ukaea.uk" }
]
# license = { file = "LICENSE" }  # no license selected yet
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
]

[project.urls]
"Repository" = "https://github.com/sid-mungale/hypnos"
"Issue Tracker" = "https://github.com/sid-mungale/hypnos/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow"
]
